Wiring up promotions banner

--- a/DataAccess.Tests/DataAccess.Tests.fsproj
+++ b/DataAccess.Tests/DataAccess.Tests.fsproj
@@ -53,6 +53,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="app.config" />
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
