--- a/Web/packages.config
+++ b/Web/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
   <package id="FsWebAddRegistryEntries" version="0.1.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
+  <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
