making code loosely coupled

--- a/DataAccess/DataAccess.fsproj
+++ b/DataAccess/DataAccess.fsproj
@@ -49,7 +49,9 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <Compile Include="TypeProviders.fs" />
     <Compile Include="Promotions.fs" />
+    <Compile Include="GitHubRepository.fs" />
     <Content Include="packages.config" />
     <Content Include="app.config" />
   </ItemGroup>
