--- a/Web/packages.config
+++ b/Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
+  <package id="FSharp.Data" version="2.1.0" targetFramework="net45" />
   <package id="FsWebAddRegistryEntries" version="0.1.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
