--- a/DataAccess/DataAccess.fsproj
+++ b/DataAccess/DataAccess.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="GitHubRepository.fs" />
     <Content Include="packages.config" />
     <Content Include="app.config" />
+    <Compile Include="InMemoryInventory.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Data">
