Adding Manufacturers UI & refactoring

--- a/Domain/Domain.fsproj
+++ b/Domain/Domain.fsproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="TypeProviders.fs" />
     <Compile Include="Promotions.fs" />
-    <Compile Include="Company.fs" />
+    <Compile Include="Production.fs" />
     <Content Include="packages.config" />
     <Content Include="app.config" />
     <Compile Include="Purchases.fs" />
