Adding test cases, making the code loosely coupled

--- a/DataAccess/DataAccess.fsproj
+++ b/DataAccess/DataAccess.fsproj
@@ -49,6 +49,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <Compile Include="TypeProviders.fs" />
     <Compile Include="GitHubRepository.fs" />
     <Content Include="packages.config" />
     <Content Include="app.config" />
