Adding Unit tests for DA and Domain

--- a/DataAccess.Tests/DataAccess.Tests.fsproj
+++ b/DataAccess.Tests/DataAccess.Tests.fsproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Content Include="app.config" />
     <Content Include="packages.config" />
+    <Compile Include="TypeProvidersTests.fs" />
+    <Compile Include="GitHubRepositoryTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Data">
