--- a/Domain.Tests/Domain.Tests.fsproj
+++ b/Domain.Tests/Domain.Tests.fsproj
@@ -53,12 +53,9 @@
     <Content Include="app.config" />
     <Content Include="packages.config" />
     <Compile Include="ProductionTests.fs" />
+    <Compile Include="PhonesTests.fs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Data">
-      <HintPath>..\packages\FSharp.Data.2.1.0\lib\net40\FSharp.Data.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="FsUnit.NUnit">
       <HintPath>..\packages\FsUnit.1.3.0.1\Lib\Net40\FsUnit.NUnit.dll</HintPath>
       <Private>True</Private>
