--- a/Web/Web.fsproj
+++ b/Web/Web.fsproj
@@ -132,11 +132,15 @@
     <Compile Include="Controllers\PhonesController.fs" />
     <Compile Include="Controllers\ManufacturersController.fs" />
     <Compile Include="Controllers\PhoneController.fs" />
-    <Content Include="Views\Web.config" />
+    <Compile Include="Controllers\ManufacturerController.fs" />
+    
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Phone\Show.cshtml" />
+    <Content Include="Views\Manufacturer\Show.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Web.config" />
     <Content Include="Web.config" />
     <Compile Include="Infrastructure.fs" />
     <Content Include="Global.asax" />
@@ -146,7 +150,7 @@
     </Compile>
     <Content Include="packages.config" />
     <Content Include="readme.txt" />
-    <Content Include="Views\Phone\Show.cshtml" />
+    
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
