--- a/Web/packages.config
+++ b/Web/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
   <package id="FSharp.Data" version="2.1.0" targetFramework="net45" />
   <package id="FsWebAddRegistryEntries" version="0.1.0.0" targetFramework="net45" />
+  <package id="ImpromptuInterface" version="6.2.2" targetFramework="net45" />
+  <package id="ImpromptuInterface.FSharp" version="1.2.13" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
