--- a/Web/Web.config
+++ b/Web/Web.config
@@ -14,6 +14,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <anonymousIdentification enabled="true" />
   </system.web>
   <system.webServer>
     <modules>
