Renaming source files

--- a/Web/Web.fsproj
+++ b/Web/Web.fsproj
@@ -151,7 +151,7 @@
     <Compile Include="Infrastructure.fs" />
     <Content Include="Global.asax" />
     <Compile Include="PhoneViewTracker.fs" />
-    <Compile Include="RecommendationHub.fs" />
+    <Compile Include="Hubs.fs" />
     <Compile Include="MvcInfrastructure.fs" />
     <Compile Include="Global.asax.fs">
       <DependentUpon>Global.asax</DependentUpon>
