Integrating with EF ASP.Identity

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -16,6 +19,11 @@
     <httpRuntime targetFramework="4.5" />
     <anonymousIdentification enabled="true" />
   </system.web>
+  <connectionStrings>
+    <add name="IdentityConnection"
+       connectionString="Data Source=localhost;Initial Catalog=PhoneCatIdentity;Integrated Security=True"
+       providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
