--- a/Web/packages.config
+++ b/Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="FSharp.Data" version="2.1.0" targetFramework="net45" />
   <package id="FsWebAddRegistryEntries" version="0.1.0.0" targetFramework="net45" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net45" />
@@ -9,6 +10,7 @@
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
