--- a/Web/Web.config
+++ b/Web/Web.config
@@ -20,9 +20,7 @@
     <anonymousIdentification enabled="true" />
   </system.web>
   <connectionStrings>
-    <add name="IdentityConnection"
-       connectionString="Data Source=localhost;Initial Catalog=PhoneCatIdentity;Integrated Security=True"
-       providerName="System.Data.SqlClient" />
+    <add name="IdentityConnection" connectionString="Data Source=localhost;Initial Catalog=PhoneCatIdentity;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <modules>
