--- a/Identity/Identity.fsproj
+++ b/Identity/Identity.fsproj
@@ -50,6 +50,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="User.fs" />
+    <Compile Include="UserValidation.fs" />
     <Content Include="packages.config" />
     <Content Include="App.config" />
   </ItemGroup>
