Adding Add item and Remove item api for shopping cart

--- a/DataAccess/DataAccess.fsproj
+++ b/DataAccess/DataAccess.fsproj
@@ -54,6 +54,7 @@
     <Content Include="packages.config" />
     <Content Include="app.config" />
     <Compile Include="InMemoryInventory.fs" />
+    <Compile Include="CartStorage.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Data">
